<resources>
    <string name="app_name">PhoneTracker</string>

    <string name="application_name">Phone Tracker</string>
    <string name="welcome">Welcome Back</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log In</string>

    <string name="option">Choose an Option</string>
    <string name="log_in_sign_up">Log In/Sign Up</string>
    <string name="find_phone">Find Lost Phone</string>

    <!--    Splash Screen-->
    <string name="splash_screen_logging_in">Logging in as</string>

    <!--    Log In Activity-->
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="log_in_verify">Verify your account</string>
    <string name="log_in_invalid_format">Invalid email format</string>
    <string name="log_in_user_not_found">User is not registered</string>
    <string name="log_in_incorrect_pass">Incorrect password</string>


    <!--    Sign Up Activity-->
    <string name="full_name">Enter Full Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="create_account">Create Account</string>
    <string name="signUp">Sign Up</string>
    <string name="sign_up_enter_username">Enter Username</string>


    <!--    Error Messages-->
    <string name="missing_field">Required Field</string>
    <string name="invalid_email">Invalid Email</string>

    <string name="invalid_name">Invalid Name</string>
    <string name="minimum_length_full_name">Enter Full Name</string>
    <string name="password_length">Password Too Short</string>
    <string name="username_length">Username Too Short</string>
    <string name="email_taken">Email is already used.</string>


    <!--    Main Dashboard-->
    <string name="main_dashboard_registered_devices">Registered Devices</string>
    <string name="main_dashboard_request_friend_location">Request Friend Location</string>
    <string name="main_dashboard_list_of_location">Go To Map</string>
    <string name="main_dashboard_settings">Settings</string>


    <!--    Register Or Unregister-->
    <string name="register_or_unregister_track_phone">Track Device</string>
    <string name="register_or_unregister_untrack_phone">Remove Tracking</string>
    <string name="register_or_unregister_currently_unregistered">Device is currently unregistered</string>
    <string name="register_or_unregister_currently_registered">Device name:\n%1$s</string>
    <string name="register_or_unregister_unregister_device">Click here to Unregister Device</string>
    <string name="register_or_unregister_register_device">Click here to Register Device</string>


    <!--    Image Descriptions-->
    <string name="logo_description">Logo of Application</string>

    <!--    Persistent Notification-->
    <string name="persistent_notification_some_string">Location saved</string>

    <!--    LocationTrackerService-->
    <string name="location_service_tracked">Tap here to Stop.</string>
    <string name="location_service_turned_on">Tracking On</string>


    <!--    Registered Phones RecyclerView Adapter-->
    <string name="registered_phone_battery_level">Battery Level: %1$d %%</string>
    <string name="loading">Loading…</string>
    <string name="error_geolocation">Could not get the location… Refresh the page</string>


    <!--    Request location of Friend-->
    <string name="request_location_username">Enter Friends\' Email</string>
    <string name="request_location_message">Send a message…</string>
    <string name="request_location_status">Status:</string>
    <string name="request_location_send_button">Send a Request</string>
    <string name="request_location_time_sent">Time Sent:\n\t %1$s %2$s</string>
    <string name="request_location_dialog_title">Are you sure you want to delete this request?</string>
    <string name="request_location_simple_text_view">Sent Request</string>
    <string name="request_location_delete">Delete</string>
    <string name="request_location_cancel">Cancel</string>
    <string name="request_location_dialog_title_accepted">%1$s has accepted your request</string>
    <string name="request_location_dialog_title_declined">%1$s has declined your request</string>
    <string name="request_location_accepted_message">You may now see %1$s current location.</string>
    <string name="request_location_declined_message">You may send another request to him/her again.</string>
    <string name="request_location_resend_request">Resend Request</string>
    <string name="request_location_accepted_go_to_map">Map View</string>

    <!--    Notification Adapter-->
    <string name="notification_adapter_location_request_message">would like to access your location</string>
    <string name="notification_dialog_message">What would you like to do?</string>
    <string name="notification_dialog_accept">Accept</string>
    <string name="notification_dialog_decline">Decline</string>
    <string name="title_activity_map_current_location">Map</string>

<!--    Notifications-->
    <string name="notifications">All Pending Requests</string>

    <!--    Current Location Summary-->
    <string name="current_location_summary_updated_at">Updated At:</string>
    <string name="current_location_summary_time">%1$s\n%2$s</string>
    <string name="current_location_summary_loading">Loading…</string>


    <!--    Dialog Register Phone-->
    <string name="dialog_register_phone_enter_phone_name">Name this device</string>
    <string name="dialog_register_phone_positive">Register</string>
    <string name="dialog_register_phone_negative">Cancel</string>
    <string name="dialog_register_phone_register_device">Register Device</string>

    <!--    User Profile-->
    <string name="user_profile_device_name_tag">Main Device Name:</string>
    <string name="user_profile_click_to_change">Click Here to Change Main Device</string>
    <string name="user_profile_permitted_people">Permitted People</string>
    <string name="user_profile_remove_positive">Remove</string>
    <string name="user_profile_remove_cancel">Cancel</string>
    <string name="user_profile_remove_title">Would you like to remove %1$s</string>
    <string name="user_profile_remove_message">Removing %1$s would mean he/she cannot access your location.</string>


</resources>