<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/snow"
    android:elevation="0dp"
    tools:context=".Dashboard.MainDashBoardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:orientation="vertical"
        android:padding="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/mainDashboard_notificationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:clickable="true"
                android:focusable="true"
                android:foregroundGravity="center"
                android:outlineProvider="none"
                app:backgroundTint="#00000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_bell" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mainDashBoard_register_unregister"
            android:layout_width="250dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/card1_color"
            android:elevation="10dp"
            android:onClick="mainDashboard_options"
            android:tag="register"
            android:text="@string/main_dashboard_registered_devices"
            android:textColor="@color/darkBlack"
            android:transitionName="transition_register_phone"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mainDashBoard_requestLocation"
            android:layout_width="250dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/card1_color"
            android:elevation="10dp"
            android:onClick="mainDashboard_options"
            android:tag="request"
            android:text="@string/main_dashboard_request_friend_location"
            android:textColor="@color/darkBlack"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mainDashBoard_goToMap"
            android:layout_width="250dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/card1_color"
            android:elevation="10dp"
            android:onClick="mainDashboard_options"
            android:tag="map"

            android:text="@string/main_dashboard_list_of_location"
            android:textColor="@color/darkBlack"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mainDashBoard_settings"
            android:layout_width="250dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/card1_color"
            android:elevation="10dp"
            android:onClick="mainDashboard_options"
            android:tag="settings"
            android:text="@string/main_dashboard_settings"
            android:textColor="@color/darkBlack"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:onClick="logout" />


    </LinearLayout>


</ScrollView>